# sharp-rs

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
src/: channel.rs  colour.rs  common.rs  composite.rs  icon.rs  input.rs  lib.rs  metadata.rs  operation.rs  output.rs  pipeline.rs  resize.rs  stats.rs  util.rs
tests/: _negate.rs  _noise.rs  _threshold.rs  _unflatten.rs  a.js  affine.rs  alpha.rs  amain.rs  bandbool.rs  blur.rs  boolean.rs  clahe.rs  colourspace.rs  composite.rs  convolve.rs  dilate_erode.rs  extend.rs  extract.rs  extract_channel.rs  fail_on.rs  file.rs  gamma.rs  join.rs  join_channel.rs  linear_and_median.rs  main.rs  metadata.rs  modulate.rs  negate.rs  noise.rs  normalize.rs  recomb.rs  resize.rs  resize_contain.rs  resize_cover.rs  rotate.rs  sharpen.rs  threshold.rs  tile.rs  timeout.rs  (+3 more)
tests/fixtures/: maxcolor.rs  mod.rs
