[package]
name = "sharp"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "sharp"
path = "src/lib.rs"

[dependencies]
#rs-vips = {path="../rs-vips"}
rs-vips = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
num-traits = "0.2"
num-derive = "0.4"
strum = "0.27"
strum_macros = "0.27"
async-std = "1.13.1"

[profile.release]
opt-level = "s"
debug = false
strip = "none"
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
